// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentStatusCell should render 1`] = `
<tr>
  <td>
    Member
  </td>
</tr>
`;

exports[`CurrentStatusCell should render as a non-member 1`] = `
<tr>
  <td>
    Non-member
  </td>
</tr>
`;
